--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,75 @@
-.App {
-  text-align: center;
+body {
+  background-image: "%PUBLIC_URL%/data/assets/pexels-fwstudio-172292.jpg";
+  background-color: #c56031;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.brightBeckground {
+  background-color: #bac2bb;
+  min-height: 600px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.textImage {
+  float: left;
+  max-height: 300px;
+  margin: 5px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+p {
+  font-size: 1em;
+  padding: 5px;
 }
 
-.App-link {
-  color: #61dafb;
+.forTablesLists {
+  padding-top: 40px;
+  padding-left: 20px;
+}
+.biggerPic {
+  width: 100%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.smallPic {
+  cursor: zoom-in;
+}
+
+.navBackground {
+  width: 100%;
+  background-color: #251207;
+}
+
+.languageField {
+  height: 1.8rem;
+
+  z-index: 2;
+  float: right;
+  margin-right: 8rem;
+}
+
+.flag {
+  height: 1.2rem;
+  margin-right: 0.3rem;
+  cursor: pointer;
+  /*  border: 2px solid red; */
+}
+
+.cookieCheck {
+  color: red;
+  display: block;
+  cursor: pointer;
+}
+
+.pointer {
+  cursor: pointer;
+}
+
+.newLgField {
+  z-index: 2;
+  width: 7rem;
+  height: 2rem;
+
+  position: absolute;
+  right: 0;
+}
+
+.forTablesLists {
+  margin-right: 10px;
 }
