--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,10 @@
 body {
-  background-color: #c56031;
-  color: white;
+  background-color: #c8c8c7;
+  color: black;
 }
 
 .brightBeckground {
-  background-color: #525252;
+  background-color: #c8c8c7;
   min-height: 600px;
 }
 
